# efl-pl-historical-odds-toolkit

./: .gitignore  README.md  pyproject.toml
footy/: cli.py  fetch.py  form.py  odds.py
